# algolab-minesweeper

./: .gitignore  CMakeLists.txt  README.md  specification.md
documentation/: implementation.md  testing.md  usage.md  viikkoraportti1.md  viikkoraportti2.md  viikkoraportti3.md  viikkoraportti4.md  viikkoraportti5.md  viikkoraportti6.md
include/minesweeper/: aicore.hpp  csp.hpp  game.hpp  tui.hpp  utilities.hpp
src/: CMakeLists.txt  aicore.hpp  csp.hpp  cspsolver.hpp  demo.cpp  game.hpp  main.cpp  tui.hpp  utilities.hpp
src/minesweeper/: aicore.cpp  game.cpp  tui.cpp
src/tests/: test.cpp  test_aicore.hpp  test_algorithm.hpp  test_csp.hpp  test_game.hpp  test_utilities.hpp
tests/: CMakeLists.txt  test.cpp  test_aicore.cpp  test_aicore.hpp  test_algorithm.cpp  test_algorithm.hpp  test_csp.cpp  test_csp.hpp  test_game.hpp  test_utilities.cpp  test_utilities.hpp  tests_include-b12d07c.cmake  tests_tests-b12d07c.cmake
